--- a/greedy_bank/package.json
+++ b/greedy_bank/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
+    "es6-promise": "^4.2.5",
     "express": "^4.16.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
