--- a/greedy_bank/package.json
+++ b/greedy_bank/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.9",
     "body-parser": "^1.18.3",
     "es6-promise": "^4.2.5",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-timeout": "^1.1.2"
@@ -29,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react": "^16.4.16"
+    "@types/react": "^16.4.16",
+    "@types/react-redux": "^6.0.9"
   }
 }
